# udacity-agentic-ai-financial-services

projects/01-trace-risk-compliance-engine/: .gitignore  main.py  pyproject.toml
projects/01-trace-risk-compliance-engine/notebooks/: 01_data_exploration.ipynb  02_agent_development.ipynb  03_workflow_integration.ipynb
projects/01-trace-risk-compliance-engine/outputs/audit_logs/: agent_development.jsonl  workflow_integration.jsonl
projects/01-trace-risk-compliance-engine/outputs/audit_reports/: workflow_report_2026-07-01T182721.249028Z.json
projects/01-trace-risk-compliance-engine/outputs/filed_sars/: SAR_a2cb628d-719c-45ee-8360-9e768815dc43.json  SAR_bbf560af-704e-42d0-85c0-852d08883b16.json  SAR_d0a12525-fcf5-41c4-b51c-3190349a28c1.json  SAR_eec5a00f-5dcc-4c4a-a123-2e99c4ee3a03.json
projects/01-trace-risk-compliance-engine/src/: compliance_officer_agent.py  foundation_sar.py  risk_analyst_agent.py
projects/01-trace-risk-compliance-engine/tests/: test_compliance_officer.py  test_foundation.py  test_risk_analyst.py
