[project]
name = "01-trace-risk-compliance-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "openai>=2.44.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
